--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<li>കെട്ടിടനിര്‍മ്മാണത്തിനുള്ള അസംസ്‌കൃതവസ്തുവായും നിലം നികത്താന്‍ എളുപ്പത്തില്‍ ലഭിക്കുന്ന വിഭവമായും കണ്ട് നമ്മള്‍ പുഴമണല്‍ വ്യാപകമായി വാരിത്തുടങ്ങുന്നത് ഇരുപതാംനൂറ്റാണ്ടിന്റെ നാലാം പാദത്തിലാണ്.  15-20 വര്‍ഷങ്ങള്‍ കൊണ്ടുതന്നെ ആയിരക്കണക്കിനു വര്‍ഷങ്ങള്‍ കൊണ്ടുണ്ടായ മണല്‍ശേഖരം മുഴുവന്‍ നമ്മള്‍ വാരിത്തീര്‍ത്തു. പുഴയിലെ ജലനിരപ്പ് നാലും അഞ്ചും മീറ്ററും അതിലധികവും താഴാന്‍ തുടങ്ങിയതോടെ സമീപപ്രദേശങ്ങളിലെ കിണറുകള്‍ വറ്റാന്‍ തുടങ്ങി. പലയിടത്തും പുഴയുടെ അടിത്തട്ട് സമുദ്രനിരപ്പിനേക്കാള്‍ താഴെയായി. ഇത് കടലില്‍നിന്നുള്ള ഓരുവെള്ളം പുഴയിലേക്ക് കൂടുതല്‍ കൂടുതല്‍ കടന്നുവരാനിടയാക്കി. </li>
 	<li>ഒഴുക്കില്ലാതായ പുഴകളില്‍ പലയിടങ്ങളില്‍ നിന്നും മാലിന്യങ്ങളെത്തുകയാണ്. രാസവളങ്ങളും കീടനാശിനികളും വ്യാവസായിക മാലിന്യങ്ങളും നഗരമാലിന്യങ്ങളും നമ്മുടെ പുഴകളെ മാലിന്യവാഹികളായി മാറ്റിയിട്ട് കാലമേറെയായി. ലക്ഷക്കണക്കിന് നഗരവാസികള്‍ ലോകത്തെമ്പാടും കുടിവെള്ളത്തിനടക്കം ആശ്രയിക്കുന്നതോ ഒഴുക്കില്ലാത്ത, ശുദ്ധജലമില്ലാത്ത ഈ പുഴകളെയുമാണ്. </p></li></ul> 
  	<p>ഒഴുകുന്ന പുഴയ്‌ക്കേ ജീവനുള്ളൂ. ആ ഒഴുക്ക് മുകളില്‍ മാത്രം ഉണ്ടായാല്‍ പോരാ. പല അടുക്കുകളിലായി പല വേഗങ്ങളിലായി പുഴ ഒഴുകണം. പൂര്‍ണ്ണമായും പുഴകളുടെ പ്രതാപകാലത്തേക്ക് നമുക്കിനി തിരിച്ചുപോകാനാകുമോ എന്നത് സംശയമാണ്. വര്‍ത്തമാനകാലത്തിന്റെ ആവശ്യമറിഞ്ഞ് തോടുകളുടെയടക്കം സംരക്ഷണം പുതുതലമുറ ഏറ്റെടുത്താല്‍ മാത്രമേ ഒഴുക്കുള്ള പുഴകളെ നമുക്ക് വീണ്ടെടുക്കാനാകൂ. </p>
- 	<p>പുഴകളുടെ ഒഴുക്കിനായി അശ്രാന്തം പരിശ്രമിച്ച ഡോ. എ ലതയ്ക്കുള്ള ആദരമായി 'ഫ്രണ്ട്‌സ് ഓഫ് ലത' രണ്ട് മാസം നീണ്ടുനില്‍ക്കുന്ന 'ഒഴുകണം പുഴകള്‍' എന്ന സംസ്ഥാനതല ക്യാംപെയ്ന്‍ സംഘടിപ്പിക്കുന്നു. പുഴകള്‍ ഒഴുകേണ്ടതിന്റെ അനിവാര്യത പൊതുസമൂഹം ഉള്‍ക്കൊള്ളുന്നതിനും ഒഴുക്കിന് വിഘാതം സൃഷ്ടിക്കുന്ന ഘടകങ്ങള്‍ തിരിച്ചറിയുന്നതിനും ക്യാംപെയ്ന്‍ സഹായിക്കുമെന്നാണ് പ്രതീക്ഷ. ഒപ്പം തന്നെ പുഴകളുടെ ഒഴുക്ക് തിരിച്ചുപിടിക്കാനുള്ള ജനകീയപ്രവര്‍ത്തനങ്ങള്‍ ശക്തിപ്പെടുത്തുന്നതിനും ഇതിലൂടെ കഴിയുമെന്ന് പ്രത്യാശിക്കുന്നു. </p>
+ 	<p>പുഴകളുടെ ഒഴുക്കിനായി അശ്രാന്തം പരിശ്രമിച്ച ഡോ. എ ലതയ്ക്കുള്ള ആദരമായി <b>'ഫ്രണ്ട്‌സ് ഓഫ് ലത'</b> രണ്ട് മാസം നീണ്ടുനില്‍ക്കുന്ന <b>'ഒഴുകണം പുഴകള്‍'</b> എന്ന സംസ്ഥാനതല ക്യാംപെയ്ന്‍ സംഘടിപ്പിക്കുന്നു. പുഴകള്‍ ഒഴുകേണ്ടതിന്റെ അനിവാര്യത പൊതുസമൂഹം ഉള്‍ക്കൊള്ളുന്നതിനും ഒഴുക്കിന് വിഘാതം സൃഷ്ടിക്കുന്ന ഘടകങ്ങള്‍ തിരിച്ചറിയുന്നതിനും ക്യാംപെയ്ന്‍ സഹായിക്കുമെന്നാണ് പ്രതീക്ഷ. ഒപ്പം തന്നെ പുഴകളുടെ ഒഴുക്ക് തിരിച്ചുപിടിക്കാനുള്ള ജനകീയപ്രവര്‍ത്തനങ്ങള്‍ ശക്തിപ്പെടുത്തുന്നതിനും ഇതിലൂടെ കഴിയുമെന്ന് പ്രത്യാശിക്കുന്നു. </p>
  	<p>2019 ജനുവരി 22 മുതല്‍ ലോകജലദിനമായ മാര്‍ച്ച് 22 വരെയാണ് ക്യാംപെയ്ന്‍. പുഴത്തടങ്ങള്‍, വിദ്യാഭ്യാസസ്ഥാപനങ്ങള്‍, തദ്ദേശസ്വയംഭരണസ്ഥാപനങ്ങള്‍ എന്നിവ കേന്ദ്രീകരിച്ച് വൈവിധ്യമാര്‍ന്ന പരിപാടികള്‍ ക്യാംപെയ്‌ന്റെ ഭാഗമായി ഉണ്ടാകും.  സെമിനാറുകള്‍, ശില്പശാലകള്‍, പ്രദര്‍ശനങ്ങള്‍, പുഴനടത്തങ്ങള്‍, പുഴയാത്രകള്‍, പുഴയോരജൈവസംരക്ഷണപ്രവര്‍ത്തനങ്ങള്‍, കലാ-സാംസ്‌കാരികപരിപാടികള്‍ തുടങ്ങി നിരവധി പരിപാടികള്‍ നടക്കേണ്ടതുണ്ട്.   രാഷ്ട്രീയ-സാമൂഹിക-സാംസ്‌കാരിക-പാരിസ്ഥിതികരംഗത്തെ നിരവധി സംഘടനകള്‍ ഇതിന്റെ ഭാഗമാകുന്നു. താങ്കളുമുണ്ടാകുമല്ലോ. </p>
 ചെയര്‍മാന്‍ :<b>ഡോ.വി.എസ്.വിജയന്‍</b><br />
 ജനറല്‍ കണ്‍വീനര്‍ :<b>സി.ആര്‍.നീലകണ്ഠന്‍ </b><br />
@@ -93,282 +93,19 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>എസ്.പി. രവി ഫോണ്‍നമ്പര്‍</br>സബ്ന ഫോണ്‍ നമ്പര്‍</p>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<p>എസ് പി രവി 9447518773</br>സി ആര്‍ നീലകണ്ഠന്‍ 9446496332</br> സബ്ന 9847260703</p>
 								<ul class="icons">
 									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.facebook.com/events/508160489674983/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/kole-birders/Rivers-Should-Flow-Campaign-2019" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
-
-						<!-- Elements -->
-							<article id="elements">
-								<h2 class="major">Elements</h2>
-
-								<section>
-									<h3 class="major">Text</h3>
-									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
-									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
-									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
-									<hr />
-									<h2>Heading Level 2</h2>
-									<h3>Heading Level 3</h3>
-									<h4>Heading Level 4</h4>
-									<h5>Heading Level 5</h5>
-									<h6>Heading Level 6</h6>
-									<hr />
-									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
-									<h4>Preformatted</h4>
-									<pre><code>i = 0;
-
-while (!deck.isInOrder()) {
-    print 'Iteration ' + i;
-    deck.shuffle();
-    i++;
-}
-
-print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
-								</section>
-
-								<section>
-									<h3 class="major">Lists</h3>
-
-									<h4>Unordered</h4>
-									<ul>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Alternate</h4>
-									<ul class="alt">
-										<li>Dolor pulvinar etiam.</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
-									</ul>
-
-									<h4>Ordered</h4>
-									<ol>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis viverra.</li>
-										<li>Felis enim feugiat.</li>
-										<li>Dolor pulvinar etiam.</li>
-										<li>Etiam vel felis lorem.</li>
-										<li>Felis enim et feugiat.</li>
-									</ol>
-									<h4>Icons</h4>
-									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-									</ul>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Table</h3>
-									<h4>Default</h4>
-									<div class="table-wrapper">
-										<table>
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-
-									<h4>Alternate</h4>
-									<div class="table-wrapper">
-										<table class="alt">
-											<thead>
-												<tr>
-													<th>Name</th>
-													<th>Description</th>
-													<th>Price</th>
-												</tr>
-											</thead>
-											<tbody>
-												<tr>
-													<td>Item One</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Two</td>
-													<td>Vis ac commodo adipiscing arcu aliquet.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Three</td>
-													<td> Morbi faucibus arcu accumsan lorem.</td>
-													<td>29.99</td>
-												</tr>
-												<tr>
-													<td>Item Four</td>
-													<td>Vitae integer tempus condimentum.</td>
-													<td>19.99</td>
-												</tr>
-												<tr>
-													<td>Item Five</td>
-													<td>Ante turpis integer aliquet porttitor.</td>
-													<td>29.99</td>
-												</tr>
-											</tbody>
-											<tfoot>
-												<tr>
-													<td colspan="2"></td>
-													<td>100.00</td>
-												</tr>
-											</tfoot>
-										</table>
-									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button primary icon fa-download">Icon</a></li>
-										<li><a href="#" class="button icon fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button primary disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-											</div>
-											<div class="field half">
-												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-											</div>
-											<div class="field">
-												<label for="demo-category">Category</label>
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-												<label for="demo-priority-low">Low</label>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-high" name="demo-priority">
-												<label for="demo-priority-high">High</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-copy" name="demo-copy">
-												<label for="demo-copy">Email me a copy</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-human" name="demo-human" checked>
-												<label for="demo-human">Not a robot</label>
-											</div>
-											<div class="field">
-												<label for="demo-message">Message</label>
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
-								</section>
-
-							</article>
-
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; River Research Center [CC BY SA 4.0]. Design:<a href="https://www.facebook.com/manoj.k.mohan">Manoj K</a> <a href="https://html5up.net">HTML5 UP</a>. Image: <a href="https://commons.wikimedia.org/wiki/File:The_rocky_river_red_in_the_Vettilapara_Region_of_the_Chalakudy_River.jpg">Jan Joseph George</a></p>
+						<p class="copyright">&copy; River Research Center [CC BY SA 4.0]. Maintained by <a href="https://www.facebook.com/manoj.k.mohan">Manoj K.</a> Design: <a href="https://html5up.net">HTML5 UP</a>. Image: <a href="https://commons.wikimedia.org/wiki/File:The_rocky_river_red_in_the_Vettilapara_Region_of_the_Chalakudy_River.jpg">Jan Joseph George</a></p>
 					</footer>
 
 			</div>
