Inaguratiin event added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 								<p><q>നാടിന്റെ ജലസുരക്ഷയ്ക്കായി പുഴയൊഴുക്ക് തിരിച്ച് പിടിക്കുക.</q><br />
 <a href="https://www.facebook.com/events/508160489674983/">ജനുവരി 22 മുതൽ മാര്‍ച്ച് 22 [ജലദിനം] വരെ</a><br />
 </p>
+<a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a>
 							</div>
 						</div>
 						<nav>
@@ -69,16 +70,22 @@
 							<article id="resources">
 								<h2 class="major">Resource</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-<ul style="list-style-type:square"><li>Program Notice</li>
-<li>Book PDF 1</li>
-<li>Book PDF 2</li>
+<ul style="list-style-type:square"><li><a href="/resources/Ozhukanam_Puzhkal_Campaign_Notice.pdf" download="Campaign Notice">Rivers Should Flow [Ozhukanam Puzhakal] - State Campaign Notice [PDF]</a></li>
+<li></li>
+<li></li>
+</ul>
 							</article>
 
 						<!-- About -->
 							<article id="programs">
 								<h2 class="major">പരിപാടികൾ</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>2019 ജനുവരി 22 മുതൽ ലോകജലദിനമായ മാര്‍ച്ച് 22 വരെയാണ് ക്യാംപെയ്ന്‍. പുഴത്തടങ്ങൾ, വിദ്യാഭ്യാസസ്ഥാപനങ്ങൾ, തദ്ദേശസ്വയംഭരണസ്ഥാപനങ്ങൾ എന്നിവ കേന്ദ്രീകരിച്ച് വൈവിധ്യമാര്‍ന്ന പരിപാടികൾ ക്യാംപെയ്‌ന്റെ ഭാഗമായി ഉണ്ടാകും. സെമിനാറുകൾ, ശില്പശാലകൾ, പ്രദര്‍ശനങ്ങൾ, പുഴനടത്തങ്ങൾ, പുഴയാത്രകൾ, പുഴയോരജൈവസംരക്ഷണപ്രവര്‍ത്തനങ്ങൾ, കലാ-സാംസ്‌കാരികപരിപാടികൾ തുടങ്ങി നിരവധി പരിപാടികൾ നടക്കേണ്ടതുണ്ട്. രാഷ്ട്രീയ-സാമൂഹിക-സാംസ്‌കാരിക-പാരിസ്ഥിതികരംഗത്തെ നിരവധി സംഘടനകൾ ഇതിന്റെ ഭാഗമാകുന്നു.</p>
+								<p>2019 ജനുവരി 22 മുതൽ ലോകജലദിനമായ മാര്‍ച്ച് 22 വരെയാണ് ക്യാംപെയ്ന്‍. പുഴത്തടങ്ങൾ, വിദ്യാഭ്യാസസ്ഥാപനങ്ങൾ, തദ്ദേശസ്വയംഭരണസ്ഥാപനങ്ങൾ എന്നിവ കേന്ദ്രീകരിച്ച് വൈവിധ്യമാര്‍ന്ന പരിപാടികൾ ക്യാംപെയ്‌ന്റെ ഭാഗമായി ഉണ്ടാകും. സെമിനാറുകൾ, ശില്പശാലകൾ, പ്രദര്‍ശനങ്ങൾ, പുഴനടത്തങ്ങൾ, പുഴയാത്രകൾ, പുഴയോരജൈവസംരക്ഷണപ്രവര്‍ത്തനങ്ങൾ, കലാ-സാംസ്‌കാരികപരിപാടികൾ തുടങ്ങി നിരവധി പരിപാടികൾ സംഘടിപ്പിക്കുന്നു.
+<ul style="list-style-type:square"><li><a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow [Ozhukanam Puzhakal] - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a></li>
+<img src="/resources/Campaign_Inauguration_22_Jan_2019.jpg" alt="" />
+<li></li>
+<li></li>
+</ul>
 							</article>
 
 						
@@ -87,7 +94,7 @@
 							<article id="news">
 								<h2 class="major">വാര്‍ത്തകളിലൂടെ</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>പത്രമാധ്യമങ്ങളിൽ വന്ന വാര്‍ത്തകളുലൂടെ..</p>
+								<p>പത്രമാധ്യമങ്ങളിൽ വന്ന വാര്‍ത്തകളിലൂടെ..</p>
 							</article>
 
 						<!-- Contact -->
