image error fixed

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>2019 ജനുവരി 22 മുതൽ ലോകജലദിനമായ മാര്‍ച്ച് 22 വരെയാണ് ക്യാംപെയ്ന്‍. പുഴത്തടങ്ങൾ, വിദ്യാഭ്യാസസ്ഥാപനങ്ങൾ, തദ്ദേശസ്വയംഭരണസ്ഥാപനങ്ങൾ എന്നിവ കേന്ദ്രീകരിച്ച് വൈവിധ്യമാര്‍ന്ന പരിപാടികൾ ക്യാംപെയ്‌ന്റെ ഭാഗമായി ഉണ്ടാകും. സെമിനാറുകൾ, ശില്പശാലകൾ, പ്രദര്‍ശനങ്ങൾ, പുഴനടത്തങ്ങൾ, പുഴയാത്രകൾ, പുഴയോരജൈവസംരക്ഷണപ്രവര്‍ത്തനങ്ങൾ, കലാ-സാംസ്‌കാരികപരിപാടികൾ തുടങ്ങി നിരവധി പരിപാടികൾ സംഘടിപ്പിക്കുന്നു.
 <ul style="list-style-type:square"><li><a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow [Ozhukanam Puzhakal] - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a></li>
-<img src="/resources/Campaign_Inauguration_22_Jan_2019.jpg" alt="" />
+<span class="image main"><img src="/resources/Campaign_Inauguration_22_Jan_2019.jpg" alt="" /></span>
 <li></li>
 <li></li>
 </ul>
