added inagruation funtion note and image

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 								<p><q>നാടിന്റെ ജലസുരക്ഷയ്ക്കായി പുഴയൊഴുക്ക് തിരിച്ച് പിടിക്കുക.</q><br />
 <a href="https://www.facebook.com/events/508160489674983/">ജനുവരി 22 മുതൽ മാര്‍ച്ച് 22 [ജലദിനം] വരെ</a><br />
 </p>
+<a href="http://blog.kole.org.in/ozhukanam-puzhakal-campaign-inauguration-pala/">‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു.</a><br />
 <a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a>
 							</div>
 						</div>
@@ -81,7 +82,14 @@
 								<h2 class="major">പരിപാടികൾ</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>2019 ജനുവരി 22 മുതൽ ലോകജലദിനമായ മാര്‍ച്ച് 22 വരെയാണ് ക്യാംപെയ്ന്‍. പുഴത്തടങ്ങൾ, വിദ്യാഭ്യാസസ്ഥാപനങ്ങൾ, തദ്ദേശസ്വയംഭരണസ്ഥാപനങ്ങൾ എന്നിവ കേന്ദ്രീകരിച്ച് വൈവിധ്യമാര്‍ന്ന പരിപാടികൾ ക്യാംപെയ്‌ന്റെ ഭാഗമായി ഉണ്ടാകും. സെമിനാറുകൾ, ശില്പശാലകൾ, പ്രദര്‍ശനങ്ങൾ, പുഴനടത്തങ്ങൾ, പുഴയാത്രകൾ, പുഴയോരജൈവസംരക്ഷണപ്രവര്‍ത്തനങ്ങൾ, കലാ-സാംസ്‌കാരികപരിപാടികൾ തുടങ്ങി നിരവധി പരിപാടികൾ സംഘടിപ്പിക്കുന്നു.
-<ul style="list-style-type:square"><li><a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow [Ozhukanam Puzhakal] - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a></li>
+<ul style="list-style-type:square"><li><b>‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു</b>
+<span class="image main"><img src="images/pala/DSCN7629.jpg" alt="" /></span>
+പ്രശസ്ത പരിസ്ഥിതിശാസ്ത്രജ്ഞയും നദീസംരക്ഷണപ്രവര്‍ത്തകയുമായ ഡോ. എ ലതയോടുള്ള ആദരപൂര്‍വ്വം സംസ്ഥാനത്തുടനീളം രണ്ട് മാസം നീണ്ടുനില്‍ക്കുന്ന ‘ ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം മീനച്ചില്‍ പുഴത്തടത്തിലെ പാലാ അല്‍ഫോണ്‍സാ കോളേജില്‍ വെച്ച് മലയാളത്തിന്റെ പ്രിയകവി പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു. വിളക്കുകൊളുത്താന്‍ അദ്ദേഹത്തോട് അഭ്യര്‍ത്ഥിച്ച ഹരിത തങ്കച്ചന്‍ എന്ന വിദ്യാര്‍ത്ഥിനിയെക്കൊണ്ടുതന്നെ ദീപം തെളിച്ചുകൊണ്ട് അദ്ദേഹം മാതൃകയായത് പുതുമയായിരുന്നു. ഏറെ ഹൃദ്യമായി തന്റെ ഉദ്ഘാടനപ്രസംഗത്തിലൂടെ നെയ്യാര്‍ എന്ന തന്റെ പുഴയോടുള്ള ആത്മബന്ധം വിവരിച്ച അദ്ദേഹം പുഴയെ നാമോരോരുത്തരും ഇപയോഗിച്ചുതുടങ്ങുന്ന ഒരു ശീലത്തിലേക്ക് തിരിച്ചുപോയെങ്കില്‍ മാത്രമേ നമുക്ക് പുഴകളെ രക്ഷിക്കാനാകൂ എന്ന് ഓര്‍മ്മിപ്പിച്ചു. പുഴകള്‍ വീണ്ടെടുക്കാന്‍ നമ്മള്‍ മഴകളാകണം. ഒരു നല്ല പുഴയിലിറങ്ങാനുള്ള യോഗമില്ലാത്ത തരത്തില്‍ നമ്മള്‍ പുഴകളെ പ്ലാസ്റ്റിക് കുപ്പികളിലേക്ക് ചുരുക്കിയിരിക്കുന്നു എന്നും അദ്ദേഹം പറഞ്ഞു. അതിനുള്ള ആര്‍ജ്ജവം വരുംതലമുറയ്ക്കുണ്ടാകട്ടെ എന്ന് ‘ഒഴുകണം പുഴകള്‍’ ക്യാംപെയ്‌ന് ആശംസകളര്‍പ്പിച്ചുകൊണ്ട് അദ്ദേഹം കൂട്ടിച്ചേര്‍ത്തു. ‘അച്ഛന്‍ പിറന്ന വീട് ‘ എന്ന തന്റെ കവിത കൂടി സ്വതസിദ്ധമായ ശൈലിയില്‍ ചൊല്ലിക്കൊണ്ടാണ് അദ്ദേഹം തന്റെ വാക്കുകള്‍ ഉപസംഹരിച്ചത്.
+<span class="image main"><img src="images/pala/DSCN7638.jpg" alt="" /></span>
+രണ്ട് പതിറ്റാണ്ടുമുമ്പ് മലയാളികള്‍ കുപ്പിവെള്ളം വാങ്ങി കുടിക്കേണ്ടിവരുമെന്ന് പറഞ്ഞ തന്നെ പരിസ്ഥിതി മൗലികവാദി എന്ന് വിളിച്ച കേരളത്തില്‍ ഇന്ന് കുപ്പിവെള്ളം മാത്രമാണ് പ്രളയത്തില്‍പ്പോലും നമ്മള്‍ ഏറെ ആശ്രയിച്ചതെന്ന് മുഖ്യപ്രഭാഷണം നടത്തിക്കൊണ്ട് സംസാരിച്ച പരിസ്ഥിതി പ്രവര്‍ത്തകന്‍ സി ആര്‍ നീലകണ്ഠന്‍ പറഞ്ഞു. പുഴയൊഴുക്ക് തടയുന്ന അണക്കെട്ടുകള്‍, മലിനീകരണം തുടങ്ങിയ വിഷയങ്ങളെക്കുറിച്ചും അദ്ദേഹം വിശദമായി സംസാരിച്ചു.<br />
+റിവര്‍ റിസര്‍ച്ച് സെന്റര്‍ അംഗം എസ് ഉണ്ണിക്കൃഷ്ണന്‍ യോഗത്തില്‍ സ്വാഗതമര്‍പ്പിച്ചു. മീനച്ചില്‍ നദീസംരക്ഷണ സമിതി പ്രസിഡന്റ് ഡോ. എസ് രാമചന്ദ്രന്‍ യോഗത്തില്‍ അധ്യക്ഷത വഹിച്ചു. ചാലക്കുടിപുഴ സംരക്ഷണ സമിതി പ്രതിനിധി എസ് പി രവി ഈ ക്യാംപെയ്‌ന്റെ ലക്ഷ്യങ്ങളും പ്രവര്‍ത്തനരീതിയും അവതരിപ്പിച്ചു., പാലാ അല്‍ഫോണ്‍സാ കോളേജ് പ്രിന്‍സിപ്പാള്‍ ഡോ സിസ്റ്റര്‍ എം ജി ജിജിമോള്‍ ക്യാംപെയ്‌ന് ആശംസകളര്‍പ്പിച്ചു. മീനച്ചില്‍ നദീസംരക്ഷണ സമിതി പ്രവര്‍ത്തകന്‍ എബി ഇമ്മാനുവല്‍ യോഗത്തിന് നന്ദി പറഞ്ഞു. ശേഷം കോളേജ് വിദ്യാര്‍ത്ഥികളുടെ നേതൃത്വത്തില്‍ പുഴകളുടെ സംരക്ഷണത്തെ മുന്‍നിര്‍ത്തി മാതൃകാനിയമസഭയും നടത്തി.
+
+<li><a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow [Ozhukanam Puzhakal] - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a></li>
 <span class="image main"><img src="/resources/Campaign_Inauguration_22_Jan_2019.jpg" alt="" /></span>
 <li></li>
 <li></li>
