--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 								<p><q>നാടിന്റെ ജലസുരക്ഷയ്ക്കായി പുഴയൊഴുക്ക് തിരിച്ച് പിടിക്കുക.</q><br />
 <a href="https://www.facebook.com/events/508160489674983/">ജനുവരി 22 മുതൽ മാര്‍ച്ച് 22 [ജലദിനം] വരെ</a><br />
 </p>
+<a href="http://blog.kole.org.in/ozukanam-puzhakal-campaign-progress-feb-2019/">‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്ന്‍ വിവിധ പരിപാടികളോടെ പുരോഗമിക്കുന്നു </a><br />
 <a href="http://blog.kole.org.in/ozhukanam-puzhakal-campaign-inauguration-pala/">‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു.</a><br />
-<a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a>
 							</div>
 						</div>
 						<nav>
