--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 							<div class="inner">
 								<h1>ഒഴുകണം പുഴകൾ</h1>
 								<p><q>നാടിന്റെ ജലസുരക്ഷയ്ക്കായി പുഴയൊഴുക്ക് തിരിച്ച് പിടിക്കുക.</q><br />
-<a href="https://www.facebook.com/events/508160489674983/">ജനുവരി 22 മുതൽ മാര്‍ച്ച് 22 [ജലദിനം] വരെ</a><br />
+<a href="https://www.facebook.com/Cholayar">ജനുവരി 22 മുതൽ മാര്‍ച്ച് 22 [ജലദിനം] വരെ</a><br />
 </p>
 <a href="http://blog.kole.org.in/ozukanam-puzhakal-campaign-progress-feb-2019/">‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്ന്‍ വിവിധ പരിപാടികളോടെ പുരോഗമിക്കുന്നു </a><br />
-<a href="http://blog.kole.org.in/ozhukanam-puzhakal-campaign-inauguration-pala/">‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു.</a><br />
+<a href="http://blog.kole.org.in/ozhukanam-puzhakal-campaign-inauguration-pala/">ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു.</a><br />
 							</div>
 						</div>
 						<nav>
@@ -74,6 +74,7 @@
 <ul style="list-style-type:square"><li><a href="/resources/Ozhukanam_Puzhkal_Campaign_Notice.pdf" download="Campaign Notice">Rivers Should Flow [Ozhukanam Puzhakal] - State Campaign Notice [PDF]</a></li>
 <li></li>
 <li></li>
+ul style="list-style-type:square"><li><a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a></li>
 </ul>
 							</article>
 
@@ -83,6 +84,7 @@
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 								<p>2019 ജനുവരി 22 മുതൽ ലോകജലദിനമായ മാര്‍ച്ച് 22 വരെയാണ് ക്യാംപെയ്ന്‍. പുഴത്തടങ്ങൾ, വിദ്യാഭ്യാസസ്ഥാപനങ്ങൾ, തദ്ദേശസ്വയംഭരണസ്ഥാപനങ്ങൾ എന്നിവ കേന്ദ്രീകരിച്ച് വൈവിധ്യമാര്‍ന്ന പരിപാടികൾ ക്യാംപെയ്‌ന്റെ ഭാഗമായി ഉണ്ടാകും. സെമിനാറുകൾ, ശില്പശാലകൾ, പ്രദര്‍ശനങ്ങൾ, പുഴനടത്തങ്ങൾ, പുഴയാത്രകൾ, പുഴയോരജൈവസംരക്ഷണപ്രവര്‍ത്തനങ്ങൾ, കലാ-സാംസ്‌കാരികപരിപാടികൾ തുടങ്ങി നിരവധി പരിപാടികൾ സംഘടിപ്പിക്കുന്നു.
 
+<ul style="list-style-type:square"><li><span class="image main"><img src="images/Ozhukanam_Puzhakal_Feb events.jpg" alt="" />Ozhukanam Puzhakal Februvary Events</span></li>
 <ul style="list-style-type:square"><li><span class="image main"><img src="images/Wetland2019.jpg" alt="" />Seminar on Wetland Conservation on 2nd February 2019 at College of Forestry, Kerala Agricultural University, Thrissur</span></li>
 
 <li>"ഒഴുകണം പുഴകൾ " സംസ്ഥാന തല സംഘാടക സമിതി യോഗം നാളെ (27-01-2019 ഞായർ ) 3 മണിക്ക് ചാലക്കുടി ടൌൺ ഹാളിൽ. 5 മണിക്ക് 27,28,29 തിയ്യതികളിൽ നടക്കുന്ന "ഒഴുകുന്ന പുഴകൾ " എക്സിബിഷൻ. ഉത്ഘാടനം ശ്രീ ബിനോയ്‌ വിശ്വം MP. </li>
