adding latha page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<p><q>നാടിന്റെ ജലസുരക്ഷയ്ക്കായി പുഴയൊഴുക്ക് തിരിച്ച് പിടിക്കുക.</q><br />
 <a href="https://www.facebook.com/Cholayar">ജനുവരി 22 മുതൽ മാര്‍ച്ച് 22 [ജലദിനം] വരെ</a><br />
 </p>
-<a href="http://blog.kole.org.in/ozukanam-puzhakal-campaign-progress-feb-2019/">‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്ന്‍ വിവിധ പരിപാടികളോടെ പുരോഗമിക്കുന്നു </a><br />
+<a href="http://blog.kole.org.in/ozukanam-puzhakal-campaign-progress-feb-2019/">‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്ന്‍ വിവിധ പരിപാടികളോടെ പുരോഗമിക്കുന്നു.</a><br />
 <a href="http://blog.kole.org.in/ozhukanam-puzhakal-campaign-inauguration-pala/">ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു.</a><br />
 							</div>
 						</div>
@@ -38,6 +38,7 @@
 								<li><a href="#resources">വിഭവങ്ങൾ</a></li>
 								<li><a href="#programs">പരിപാടികൾ</a></li>
 								<li><a href="#news">വാര്‍ത്തകളിലൂടെ</a></li>
+								<li><a href="#latha">ഡോ. എ. ലത</a></li>
 								<li><a href="#contact">ബന്ധങ്ങൾക്ക്</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -111,14 +112,23 @@ ul style="list-style-type:square"><li><a href="/resources/Campaign_Inauguration_
 								<p>പത്രമാധ്യമങ്ങളിൽ വന്ന വാര്‍ത്തകളിലൂടെ..</p>
 							</article>
 
+
+						
+
+						<!-- About Latha -->
+							<article id="latha">
+								<h2 class="major">ഡോ. എ. ലത</h2>
+								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<p>ഡോ.എ.ലതയെക്കുറിച്ച്</p>
+							</article>
+
+
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
 								<p>എസ് പി രവി 9447518773</br>സി ആര്‍ നീലകണ്ഠൻ 9446496332</br> സബ്ന 9847260703</p>
 								<ul class="icons">
-									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="https://www.facebook.com/events/508160489674983/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.facebook.com/Cholayar/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 									<li><a href="https://github.com/kole-birders/Rivers-Should-Flow-Campaign-2019" class="icon fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
