--- a/index.html
+++ b/index.html
@@ -84,17 +84,21 @@ ul style="list-style-type:square"><li><a href="/resources/Campaign_Inauguration_
 								<h2 class="major">പരിപാടികൾ</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 <ul style="list-style-type:square"><li><span class="image main"><img src="images/Ozhukanam_Puzhakal_Feb events.jpg" alt="" />Ozhukanam Puzhakal Februvary Events</span></li>
-<ul style="list-style-type:square"><li><span class="image main"><img src="images/Wetland2019.jpg" alt="" />Seminar on Wetland Conservation on 2nd February 2019 at College of Forestry, Kerala Agricultural University, Thrissur</span></li>
-
-<li>"ഒഴുകണം പുഴകൾ " സംസ്ഥാന തല സംഘാടക സമിതി യോഗം നാളെ (27-01-2019 ഞായർ ) 3 മണിക്ക് ചാലക്കുടി ടൌൺ ഹാളിൽ. 5 മണിക്ക് 27,28,29 തിയ്യതികളിൽ നടക്കുന്ന "ഒഴുകുന്ന പുഴകൾ " എക്സിബിഷൻ. ഉത്ഘാടനം ശ്രീ ബിനോയ്‌ വിശ്വം MP. </li>
+<ul style="list-style-type:square">
+<li>സ്‌കൂള്‍സ് ഫോര്‍ റിവര്‍ പരിപാടിയുടെ ഭാഗമായി ചാലക്കുടിപ്പുഴത്തടത്തില്‍ പുഴയോടനുബന്ധിച്ചുള്ള വിവിധ ആവാസവ്യവസ്ഥകളിലേക്ക് നിരീക്ഷണനടത്തങ്ങളും ജനുവരി 24 മുതല്‍ നടന്നുവരികയാണ്. സെന്റ് ജോര്‍ജ് ഹൈസ്‌കൂള്‍ പരിയാരം, കൊരട്ടി പഞ്ചായത്ത് എല്‍ പി സ്‌കൂള്‍, ഗവ: ബോയ്‌സ് ഹൈസ്‌കൂള്‍ ചാലക്കുടി, വിആര്‍ പുരം ഹൈസ്‌കൂള്‍ എന്നിവര്‍ ഇതുവരെ പങ്കെടുത്തു. മറ്റുള്ള സ്‌കൂളുകളും ഇനിയുള്ള ആവാസവ്യവസ്ഥാനിരീക്ഷണയാത്രകളില്‍പങ്കെടുക്കും.</li>
+<li>ചാലക്കുടിപ്പുഴത്തടത്തിലെ വിവിധ പൊതുഇടങ്ങളില്‍ പ്രചരണാര്‍ത്ഥം ചുവര്‍ചിത്രരചനയും നടന്നുവരുന്നു. ഗണേശ് അഞ്ചല്‍, വിഷ്ണു എന്നീ കലാകാരന്മാരാണ് ചിത്രങ്ങള്‍ ഇപ്പോള്‍ വരയ്ക്കുന്നത്.</li>
+<li>തിരുവനന്തപുരത്ത് വെള്ളായനി കായല്‍ ശുചീകരണയജ്ഞം സമാപിക്കുന്നതിന്റെ ഭാഗമായി നടന്ന പരിപാടികളിലും ‘ഒഴുകണം പുഴകള്‍’ ക്യാംപെയ്ന്‍ പങ്കാളികളായി. ജലരേഖകള്‍ പെയിന്റിംഗ് മത്സരത്തിലെ വിജയികള്‍ക്കുള്ള പാരിതോഷികങ്ങളും പരിപാടിയില്‍ വിതരണം ചെയ്തു. പരിപാടിയില്‍ പങ്കെടുത്ത എല്ലാവരും നദികളും ശുദ്ധജലതടാകങ്ങളും സംരക്ഷിക്കുമെന്ന് ജലസുരക്ഷാപ്രതിജ്ഞയെടുത്തു.</li>
+<li><span class="image main"><img src="images/Wetland2019.jpg" alt="" />ലോകതണ്ണീര്‍ത്തടദിനത്തോടനുബന്ധിച്ച് തൃശൂര്‍ ഫോറസ്ട്രി കോളേജില്‍ സെമിനാര്‍ നടന്നു. തണ്ണീര്‍ത്തടങ്ങളുടെ അവസ്ഥ, നമ്മുടെ തണ്ണീര്‍ത്തടങ്ങളിലെ ശുദ്ധജലമത്സ്യസമ്പത്ത്, മലിനീകരണം നിയന്ത്രിക്കുന്നതില്‍ കണ്ടല്‍ക്കാടുകളുടെ പങ്ക്, കാലാവസ്ഥാവ്യതിയാനവും തണ്ണീര്‍ത്തടങ്ങളും, തണ്ണീര്‍ത്തടങ്ങളും തുമ്പികളും എന്നീ വിഷയങ്ങളില്‍ വിവിധ വിദഗ്ദ്ധര്‍ അവതരണങ്ങള്‍ നടത്തി.</span></li>
+<li>ലോകതണ്ണീര്‍ത്തടദിനത്തോടനുബന്ധിച്ച് മധ്യകേരളത്തിലെ കോള്‍മേഖലയില്‍ കോള്‍മത്സ്യസര്‍വ്വേ നടന്നു. ഒഴുകണം പുഴകള്‍ ക്യാംപെയ്‌നും പങ്കാളികളായ സര്‍വ്വേ കോള്‍ ബേര്‍ഡേഴ്‌സ്, KUFOS, കോളേജ് ഓഫ് ഫോറസ്ട്രി എന്നിവരാണ് സംഘടിപ്പിച്ചത്. നിരവധി ശാസ്ത്രജ്ഞരും വിദ്യാര്‍ത്ഥികളും യുവതീയുവാക്കളും പങ്കെടുത്ത സര്‍വ്വേയില്‍ 71 ഇനം മത്സ്യങ്ങളെയടക്കം 82 ഇനം ജലജീവികളെ രേഖപ്പെടുത്തി.</li>
+<li>‘ജലരേഖകള്‍’ എന്ന പെയിന്റിംഗ് മത്സരം യുപി, ഹൈസ്‌കൂള്‍ വിദ്യാര്‍ത്ഥികള്‍ക്കായി തിരുവനന്തപുരത്തെ വെങ്ങാനൂര്‍ മോഡല്‍ ഹയര്‍ സെക്കന്ററി സ്‌കൂളില്‍ വെച്ച് നടന്നു. ഫ്രണ്ട്‌സ് ഓഫ് ലത, ട്രീ വാക്ക്-തിരുവനന്തപുരം, ഇന്‍ഡസ് സൈക്ലിംഗ് എംബസ്സി, നീര്‍ത്തടാകം എന്നീ കൂട്ടായ്മകളുടെ നേതൃത്വത്തില്‍ നടന്ന മത്സരത്തില്‍ വെള്ളായനി കായലിനു ചുറ്റുമുള്ള വിവിധ സ്‌കൂളുകളിലെ 100-ലധികം വിദ്യാര്‍ത്ഥികള്‍ പങ്കെടുത്തു.</li>
+<li>ചാലക്കുടിയിലെ വിദ്യാര്‍ത്ഥികള്‍ക്കും പൊതുജനങ്ങള്‍ക്കുമായി ഒരുക്കിയ ‘ഒഴുകുന്ന പുഴകള്‍’ ആദ്യപ്രദര്‍ശനം ചാലക്കുടി ടൗഹാളില്‍ വെച്ച് എം പി ശ്രീ ബിനോയ് വിശ്വം ഉദ്ഘാടനം ചെയ്തു. ചാലക്കുടി പ്രദേശത്തെ വിവിധ വിദ്യാഭ്യാസസ്ഥാപനങ്ങളില്‍ നിന്നും 250-ലധികം വിദ്യാര്‍ത്ഥികളും പൊതുജനങ്ങളും പ്രദര്‍ശനം കണ്ടു.</li>
+<li>"ഒഴുകണം പുഴകൾ " സംസ്ഥാന തല സംഘാടക സമിതി യോഗം നാളെ (27-01-2019 ഞായർ ) 3 മണിക്ക് ചാലക്കുടി ടൌൺ ഹാളിൽ. </li>
 <li><b>‘ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു</b>
 <span class="image main"><img src="images/pala/DSCN7629.jpg" alt="" /></span>
 പ്രശസ്ത പരിസ്ഥിതിശാസ്ത്രജ്ഞയും നദീസംരക്ഷണപ്രവര്‍ത്തകയുമായ ഡോ. എ ലതയോടുള്ള ആദരപൂര്‍വ്വം സംസ്ഥാനത്തുടനീളം രണ്ട് മാസം നീണ്ടുനില്‍ക്കുന്ന ‘ ഒഴുകണം പുഴകള്‍’ എന്ന ക്യാംപെയ്‌ന്റെ ഉദ്ഘാടനം മീനച്ചില്‍ പുഴത്തടത്തിലെ പാലാ അല്‍ഫോണ്‍സാ കോളേജില്‍ വെച്ച് മലയാളത്തിന്റെ പ്രിയകവി പ്രൊഫ. വി മധുസൂദനന്‍ നായര്‍ നിര്‍വ്വഹിച്ചു.
 <span class="image main"><img src="images/pala/DSCN7638.jpg" alt="" /></span>
 <li><a href="/resources/Campaign_Inauguration_22_Jan_2019.jpg" download="Campaign_Inauguration 22 Jan 2019">Rivers Should Flow [Ozhukanam Puzhakal] - State Campaign Inauguration by Poet Prof. V. Madhusoodanan Nair on January 22nd in Meenachil River Basin at Alphonsa College, Pala</a></li>
 <span class="image main"><img src="/resources/Campaign_Inauguration_22_Jan_2019.jpg" alt="" /></span>
-<li></li>
-<li></li>
 </ul>
 							</article>
 
